# django-redis-init

./: .gitignore  ReadMe.md  pyproject.toml  run_redis.sh
core/: settings.py  urls.py
plane/: apps.py  models.py  redis_plane_helper.py  serializers.py  tests.py  urls.py  views.py
